<resources>
    <string name="app_name">Weather Forecast</string>

    <string name="gps">Gps</string>
    <string name="search">Search</string>

    <string name="search_was_not_performed">Search was not performed…</string>
    <string name="temperature">%1$d°</string>
    <string name="hourly_temperature">about %1$d°</string>
    <string name="temperature_feels_like">feels like %1$d°</string>
    <string name="wind_speed">wind about %1$d KM/H</string>
    <string name="hourly_wind_speed">%1$d KM/H</string>
    <string name="clouds">%1$d%%</string>
    <string name="humidity">%1$d%%</string>
    <string name="pressure">%1$d hPa</string>
    <string name="more">MORE >></string>

    <string name="main_activity_today_fragment">Today</string>
    <string name="main_activity_hourly_fragment">Hourly</string>
    <string name="main_activity_daily_fragment">Daily</string>

    <string name="fragment_today_humidity">Humidity</string>
    <string name="fragment_today_clouds">Clouds</string>
    <string name="fragment_today_pressure">Pressure</string>
    <string name="fragment_today_sunrise">Sunrise</string>
    <string name="fragment_today_sunset">Sunset</string>
    <string name="fragment_today_uv_index">UV index</string>

    <string name="main_activity_try_later">Something went wrong…Try later!</string>
    <string name="main_activity_click_again">Click again to exit the app</string>
    <string name="main_activity_permission_denied">Permission denied!</string>
    <string name="main_activity_permission_denied_last_query">Permission denied! Search was performed for the last query</string>
    <string name="main_activity_check_gps_enabled">Check if GPS is enabled!</string>
    <string name="main_activity_check_gps_enabled_or_query">Check if GPS is enabled or enter new query…</string>
    <string name="main_activity_check_internet_connection">Check your Internet connection!</string>
    <string name="main_activity_nothing_not_found">Nothing was found for your search!</string>
    <string name="main_activity_date_update">Date update!</string>
    <string name="main_activity_refresh_start">Last location was not found!</string>
</resources>
