<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="@dimen/margin_padding_16dp"
                android:layout_marginStart="@dimen/margin_padding_16dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="@dimen/fragment_today_ll_width"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_padding_16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_padding_8dp"
                        android:textSize="@dimen/text_size_title"
                        tools:text="00°"/>

                    <TextView
                        android:id="@+id/tv_description_weather"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_padding_8dp"
                        android:textSize="@dimen/text_size_normal"
                        android:textStyle="bold"
                        tools:text="sunny"/>

                    <TextView
                        android:id="@+id/tv_temperature_feels_like"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_padding_8dp"
                        tools:text="feels like 00°" />

                    <TextView
                        android:id="@+id/tv_wind_speed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_padding_8dp"
                        tools:text="wind 00 KM/H" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/iv_image_weather"
                    android:layout_width="@dimen/fragment_today_size_of_main_image"
                    android:layout_height="@dimen/fragment_today_size_of_main_image"
                    android:src="@drawable/d_clear_sky"
                    tools:ignore="ContentDescription"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="@dimen/fragment_today_cv_width"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/margin_padding_4dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/margin_padding_8dp"
                                android:layout_gravity="center"
                                android:text="@string/fragment_today_humidity" />

                            <TextView
                                android:id="@+id/tv_humidity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/margin_padding_8dp"
                                android:gravity="center"
                                android:textSize="@dimen/text_size_medium"
                                tools:text="0%"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="@dimen/fragment_today_cv_width"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/margin_padding_4dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/margin_padding_8dp"
                                android:layout_gravity="center"
                                android:text="@string/fragment_today_clouds" />

                            <TextView
                                android:id="@+id/tv_clouds"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/margin_padding_8dp"
                                android:gravity="center"
                                android:textSize="@dimen/text_size_medium"
                                tools:text="0%"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="@dimen/fragment_today_cv_width"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/margin_padding_4dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/margin_padding_8dp"
                                android:layout_gravity="center"
                                android:text="@string/fragment_today_pressure" />

                            <TextView
                                android:id="@+id/tv_pressure"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/margin_padding_8dp"
                                android:gravity="center"
                                android:textSize="@dimen/text_size_medium"
                                tools:text="0,000 Mb"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="@dimen/fragment_today_cv_width"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/margin_padding_4dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/margin_padding_8dp"
                                android:layout_gravity="center"
                                android:text="@string/fragment_today_sunrise" />

                            <TextView
                                android:id="@+id/tv_sunrise"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/margin_padding_8dp"
                                android:gravity="center"
                                android:textSize="@dimen/text_size_medium"
                                tools:text="00:00"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="@dimen/fragment_today_cv_width"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/margin_padding_4dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/margin_padding_8dp"
                                android:layout_gravity="center"
                                android:text="@string/fragment_today_sunset" />

                            <TextView
                                android:id="@+id/tv_sunset"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/margin_padding_8dp"
                                android:gravity="center"
                                android:textSize="@dimen/text_size_medium"
                                tools:text="00:00" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="@dimen/fragment_today_cv_width"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/margin_padding_4dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/margin_padding_8dp"
                                android:layout_gravity="center"
                                android:text="@string/fragment_today_uv_index" />

                            <TextView
                                android:id="@+id/tv_uvi"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/margin_padding_8dp"
                                android:gravity="center"
                                android:textSize="@dimen/text_size_medium"
                                tools:text="00"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_hourly"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_padding_12dp"
                android:layout_marginEnd="@dimen/margin_padding_16dp"
                android:layout_marginStart="@dimen/margin_padding_16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_padding_16dp"
                    android:layout_marginTop="@dimen/margin_padding_8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_activity_hourly_fragment"
                        android:textSize="@dimen/text_size_normal"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_more_next24"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more"
                        android:textSize="@dimen/text_size_small"
                        android:layout_marginStart="@dimen/margin_padding_208dp" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_hourly_forecast"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_padding_32dp"
                    android:layout_marginStart="@dimen/margin_padding_8dp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_daily"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_padding_16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_padding_16dp"
                    android:layout_marginTop="@dimen/margin_padding_8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_activity_daily_fragment"
                        android:textSize="@dimen/text_size_normal"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_more_hourly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more"
                        android:textSize="@dimen/text_size_small"
                        android:layout_marginStart="@dimen/margin_padding_220dp" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_daily_forecast"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_padding_32dp"
                    android:layout_marginStart="@dimen/margin_padding_8dp" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
